fix: change letter-spacing in components HowItWorks and About, change steps numbers left distance in HowItWorks

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -11,7 +11,7 @@
     font-style: normal;
     font-weight: 700;
     line-height: 140%; /* 25.2px */
-    letter-spacing: 1.44px;
+    letter-spacing: 0.08em;
     text-transform: uppercase;
     margin-bottom: 20px;
     text-align: center;
@@ -50,7 +50,7 @@
     }
 
     .p {
-      margin-bottom: 0.5rem;
+      margin-bottom:10px;
     }
   }
 
